--- a/packages/auth/public/index.html
+++ b/packages/auth/public/index.html
@@ -2,6 +2,6 @@
 <html lang="en">
 	<head></head>
 	<body>
-		<div id="_marketing-dev-root"></div>
+		<div id="_auth-dev-root"></div>
 	</body>
 </html>
